Got it! We're compiling. Now, just to get the crypto right...

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ hmac = "0.12"
 sha2 = "0.10"
 curve25519-dalek = "4.1.1"
 x25519-dalek = {version="^2.0.1", features = ["static_secrets"] }
-rand_core = {version="^0.9.3", features = ["std"]}
+rand_core = {version="0.6.4", features = ["std"]}
+rand = "0.9.1"
+
