--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ curve25519-dalek = "4.1.1"
 x25519-dalek = {version="^2.0.1", features = ["static_secrets"] }
 rand_core = {version="0.6.4", features = ["std"]}
 rand = "0.9.1"
+log = "0.4.26"
+hex = "0.4.3"
 
