--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ curve25519-dalek = "4.1.1"
 x25519-dalek = {version="^2.0.1", features = ["static_secrets"] }
 
 # wasm incompatible
-ring = "0.17.8"
-rand_core = {version="0.6.4", features = ["std"]}
-rand = "0.9.1"
+#ring = "0.17.8"
+#rand_core = {version="0.6.4", features = ["std"]}
+#rand = "0.9.1"
 
 #wasm compatible
 getrandom = { version = "0.2", features = ["js"] }
