provide bincode serde

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ x25519-dalek = {version="^2.0.1", features = ["static_secrets"] }
 #wasm compatible
 getrandom = { version = "0.2", features = ["js"] }
 aes-gcm = "0.10"
-serde = { version = "1.0.219", features = ["derive"] }
-
 log = "0.4.26"
 hex = "0.4.3"
+bincode = "2.0.1"
 
